--- a/manifest.json
+++ b/manifest.json
@@ -5,24 +5,24 @@
     "manifest_version": 3,
     "action": {
         "default_icon": "logo.png",
-        "default_popup": "popup.html"
+        "default_popup": "popup/index.html"
     },
     "content_scripts": [
         {
             "matches": [
-                "http://127.0.0.1:8898/*"
+                "http://127.0.0.1:7777/pages/upload-info/list"
             ],
             "run_at": "document_end",
-            "js": ["contentScriptDai.js"]
+            "js": ["contentScrips/Dai.js"]
         },
         {
             "matches": [
-                "https://etax.sichuan.chinatax.gov.cn/*"
+                "https://etax.sichuan.chinatax.gov.cn/bszm-web/apps/views/beforeLogin/indexBefore/*"
             ],
             "run_at": "document_start",
             "js": [
-                "jquery-3.6.0.min.js",
-                "contentScriptEtax.js"
+                "contentScrips/jquery-3.6.0.min.js",
+                "contentScrips/etaxSichuanLogin.js"
             ]
         }
     ],
@@ -37,8 +37,9 @@
         "tabs",
         "message",
         "action",
-        "debugger",
-        "https://etax.sichuan.chinatax.gov.cn/*",
-        "https://zhihu.com"
+        "debugger"
+    ],
+    "host_permissions": [
+        "http://127.0.0.1:4000"
     ]
 }
