登陆后第一屏自动化

--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,16 @@
                 "contentScrips/jquery-3.6.0.min.js",
                 "contentScrips/etaxSichuanLogin.js"
             ]
+        },
+        {
+            "matches": [
+                "https://etax.sichuan.chinatax.gov.cn/bszm-web/apps/views/publicPage/desk.html*"
+            ],
+            "run_at": "document_start",
+            "js": [
+                "contentScrips/jquery-3.6.0.min.js",
+                "contentScrips/etaxSichuanDesk.js"
+            ]
         }
     ],
     "background": {
