--- a/manifest.json
+++ b/manifest.json
@@ -47,6 +47,17 @@
         },
         {
             "matches": [
+                "https://etax.sichuan.chinatax.gov.cn/sbzx-web/apps/views/xgmsb-tbs_*"
+            ],
+            "run_at": "document_start",
+            "js": [
+                "contentScrips/jquery-3.6.0.min.js",
+                "contentScrips/etaxSichuanXgmsb.js"
+            ]
+        },
+        
+        {
+            "matches": [
                 "https://etax.chongqing.chinatax.gov.cn/"
             ],
             "run_at": "document_start",
@@ -89,7 +100,7 @@
         
     ],
     "background": {
-        "service_worker": "background.js"
+        "service_worker": "background-v2.js"
     },
     "permissions": [
         "app",
