--- a/manifest.json
+++ b/manifest.json
@@ -160,6 +160,7 @@
             "all_frames": true,
             "js": [
                 "contentScrips/jquery-3.6.0.min.js",
+                "contentScrips/utiles.js",
                 "contentScrips/etaxChongqingWLSB.js"
             ]
         }
