--- a/manifest.json
+++ b/manifest.json
@@ -17,8 +17,23 @@
             "js": ["contentScrips/init-task.js"]
         },
         {
+            "des": "测试专用",
+            "matches": [
+                "http://121.89.205.96:8877/pages/task"
+            ],
+            "run_at": "document_end",
+            "js": ["contentScrips/init-task.js"]
+        },
+        {
             "matches": [
                 "http://127.0.0.1:7777/pages/upload-info/list"
+            ],
+            "run_at": "document_end",
+            "js": ["contentScrips/Dai.js"]
+        },
+        {
+            "matches": [
+                "http://121.89.205.96:8877/pages/upload-info/list"
             ],
             "run_at": "document_end",
             "js": ["contentScrips/Dai.js"]
